Fix: wrap FlipToPage component in div for styling
FlipToPage component was wrapped with react fragments, preventing any
overall styling for the component itself. Wrap elements with div to
have access to className for positioning and stacking z-index of other
components.

--- a/src/components/FlipToPage/FlipToPage.scss
+++ b/src/components/FlipToPage/FlipToPage.scss
@@ -1,5 +1,7 @@
 .flip_animation {
-    perspective: 800px;
+    width: 40vw;
+    height: 90vh;
+    perspective: 1000px;
 }
 
 .flip-page {
@@ -25,7 +27,7 @@
 }
 
 .flip_page-3 {
-    transition-delay: 0.4s;
+    transition-delay: 0.3s;
 }
 
 .flip-change_index-2 {
